# CardWrangler

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/cardwrangler/: __init__.py  __main__.py  app.py
src/cardwrangler/models/: __init__.py  card_job.py  compare_result.py  item.py
src/cardwrangler/persistence/: __init__.py  repository.py
src/cardwrangler/services/: __init__.py  compare_service.py  data_service.py  network_service.py  offload_service.py  report_service.py
src/cardwrangler/utils/: __init__.py  checksum.py
src/cardwrangler/viewmodels/: __init__.py  content_view_model.py
src/cardwrangler/views/: __init__.py  add_card_view.py  compare_view.py  detail_view.py  main_window.py  settings_view.py  sidebar_view.py  workers.py
src/cardwrangler/views/components/: __init__.py  card_row.py
tests/: __init__.py  smoke_add_button.py  smoke_offload_thread.py  test_checksum.py  test_compare_service.py  test_content_view_model.py  test_offload_multi.py  test_repository.py
