[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cardwrangler"
version = "0.1.0"
description = "跨平台 DIT 转卡 / 校验工具（Python + PySide6）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PySide6>=6.7"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
cardwrangler = "cardwrangler.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
